--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,14 @@
             <artifactId>jetty-server</artifactId>
             <version>11.0.15</version>
         </dependency>
+
+        <!-- Awaitility -->
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>4.2.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
